fix: restore overflow property for code blocks and apply it to highlight class

--- a/assets/scss/base/_syntax.scss
+++ b/assets/scss/base/_syntax.scss
@@ -13,7 +13,6 @@ code:not([class]):not([id]) {
   @extend %rounded;
   @extend %code-snippet-bg;
 
-  overflow: auto;
   padding-bottom: 0.75rem;
 
   @at-root figure#{&} {
@@ -63,6 +62,9 @@ code:not([class]):not([id]) {
 
   .chroma {
     padding-bottom: 6px;
+  }
+  .highlight {
+    overflow: auto;
   }
 } /* .highlight */
 
